--- a/wp-content/ai1wm-backups/web.config
+++ b/wp-content/ai1wm-backups/web.config
@@ -1,5 +1,6 @@
 <configuration>
 <system.webServer>
+<staticContent>
 <mimeMap fileExtension=".wpress" mimeType="application/octet-stream" />
 </staticContent>
 <defaultDocument>
